# backend/docs/swagger.json
@@ -102,6 +102,25 @@
             }
         },
         "/api/v1/post": {
+            "get": {
+                "description": "Get Posts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Post",
+                "operationId": "getPost",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "cursor",
+                        "in": "path"
+                    }
+                ],
+                "responses": {}
+            },
             "post": {
                 "description": "Post",
                 "consumes": [
